--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -1,7 +1,7 @@
 version: '3.5'
 services:
-  CHANGEZMOILENOMDUGROUPE:
-    image: m2gi/CHANGEZMOILENOMDUGROUPE:0.0.1-SNAPSHOT
+  g2-movies:
+    image: m2gi/g2-movies:0.0.1-SNAPSHOT
     networks:
       #network pour traefik
       - 'traefik-public'
@@ -13,7 +13,7 @@ services:
        restart_policy:
          max_attempts: 5
        labels:
-         - traefik.frontend.rule=Host:CHANGEZMOILENOMDUGROUPE.m2gi.win
+         - traefik.frontend.rule=Host:g2-movies.m2gi.win
          - traefik.enable=true
          - traefik.port=8080
          - traefik.tags=traefik-public
