Re-Modification url

--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -13,7 +13,7 @@ services:
        restart_policy:
          max_attempts: 5
        labels:
-         - traefik.frontend.rule=Host:g2.m2gi.win
+         - traefik.frontend.rule=Host:groupe2.m2gi.win
          - traefik.enable=true
          - traefik.port=8080
          - traefik.tags=traefik-public
