--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,98 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<!-- Skip the default running of this plug-in (or everything is run
+						twice...see below) -->
+					<skip>true</skip>
+					<!-- Show 100% of the lines from the stack trace (doesn't work) -->
+					<trimStackTrace>false</trimStackTrace>
+				</configuration>
+				<executions>
+					<execution>
+						<id>unit-tests</id>
+						<phase>test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+							<!-- Never skip running the tests when the test phase is invoked -->
+							<skip>false</skip>
+							<includes>
+								<!-- Include unit tests within integration-test phase. -->
+								<include>**/*Test.java</include>
+							</includes>
+							<excludes>
+								<!-- Exclude integration tests within (unit) test phase. -->
+								<exclude>**/*IntegrationTest.java</exclude>
+							</excludes>
+						</configuration>
+					</execution>
+					<execution>
+						<id>integration-tests</id>
+						<phase>integration-test</phase>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<configuration>
+							<!-- Never skip running the tests when the integration-test phase
+								is invoked -->
+							<skip>false</skip>
+							<includes>
+								<!-- Include integration tests within integration-test phase. -->
+								<include>**/*IntegrationTest.java</include>
+							</includes>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.0</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+
+			<plugin>
+				<groupId>com.github.kongchen</groupId>
+				<artifactId>swagger-maven-plugin</artifactId>
+				<version>3.1.6</version>
+				<configuration>
+					<apiSources>
+						<apiSource>
+							<springmvc>true</springmvc>
+							<locations>
+								<location>com.pdy.fac.demorestback.hero.api</location>
+								<location>com.pdy.fac.demorestback.version.api</location>
+							</locations>
+							<info>
+								<title>Démo Rest back</title>
+								<version>${project.version}</version>
+								<description>Projet de démo</description>
+							</info>
+							<outputFormats>yaml</outputFormats>
+							<swaggerDirectory>target/swagger-ui</swaggerDirectory>
+						</apiSource>
+					</apiSources>
+				</configuration>
+			</plugin>
 		</plugins>
 
 		<resources>
