--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -2,6 +2,8 @@ version: '3.5'
 services:
   g2-movies:
     image: m2gi/g2-movies:0.0.1-SNAPSHOT
+    environment:
+      - _JAVA_OPTIONS=-Xmx512m -Xms256m -XX:+UseSerialGC -Xss512k
     networks:
       #network pour traefik
       - 'traefik-public'
